--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
         <div class="intro">
             <div class="intro-sub">Himanshu Narang</div>
-            <h1>Data Scientist and Web <span>Developer</span></h1>
-            <p>I am a full stack web developer and a data scientist <br> interested in learning about new technology. <br> </p>
+            <h1>Software Engineer And Data Science <span>Enthusiast</span></h1>
+            <p>I am a software Engineer and Data Science Enthusiast <br> interested in learning about new technology. <br> </p>
 
             <div class="social-icons">
                 <ul class="list-inline">
