--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
         <div class="intro">
             <div class="intro-sub">Himanshu Narang</div>
-            <h1>Software Engineer And Data Science <span>Enthusiast</span></h1>
+            <h1>Software<span>Engineer</span></h1>
             <p>I am a software Engineer and Data Science Enthusiast <br> interested in learning about new technology. <br> </p>
 
             <div class="social-icons">
@@ -128,7 +128,7 @@
                 <div class="col-md-8 col-md-pull-4">
                     <div class="short-info wow fadeInUp">
                         <h3>Objective</h3>
-                        <p> An opportunity to work and upgrade oneself, as well as being involved in an organization that believes in gaining a competitive edge and giving back to the community. Presently expanding my experience in Data Science. Confident, calm, responsible and a forward thinker, which others may find inspiring when working as a team.</p>
+                        <p> An opportunity to work and upgrade oneself, as well as being involved in an organization that believes in gaining a competitive edge and giving back to the community. Presently working as an SDET in Cvent. Confident, Quick Learner, responsible and a forward thinker, which others may find inspiring when working as a team.</p>
                     </div>
 
                     <div class="short-info wow fadeInUp">
@@ -136,11 +136,11 @@
                         <h1>Thinker Believer Doer</h1>
 
                         <ul class="list-check">
-                            <li>Web Development</li>
+                            <li>Software Engineer</li>
                             <li>Data Science</li>
 			    <li>Natural Language Processing</li>
                             <li>Machine Learning</li>
-			    <li>Deep Learning Learning</li>
+			    <li>APIs</li>
 			    <li>Competitive Coding</li>
                         </ul>
                     </div>
@@ -168,7 +168,31 @@
                         <ul class="timeline">
                             <li>
                                 <div class="posted-date">
-                                    <span class="month">2015-Present</span>
+                                    <span class="month">2019-Present</span>
+                                </div>
+                                <!-- /posted-date -->
+
+                                <div class="timeline-panel wow fadeInUp">
+                                    <div class="timeline-content">
+                                        <div class="timeline-heading">
+                                            <h3>Software Development Engineer in Test (SDET)</h3>
+                                            <span>Cvent, Gurgaon</span>
+                                        </div>
+                                        <!-- /timeline-heading -->
+
+                                        <div class="timeline-body">
+                                            <p>Part of the Automation Team<br>2 Times Pat On The Back Award</p>
+                                        </div>
+                                        <!-- /timeline-body -->
+                                    </div>
+                                    <!-- /timeline-content -->
+                                </div>
+                                <!-- /timeline-panel -->
+                            </li>
+
+                            <li>
+                                <div class="posted-date">
+                                    <span class="month">2015-2019</span>
                                 </div>
                                 <!-- /posted-date -->
 
@@ -181,7 +205,7 @@
                                         <!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>Currently pursuing Bachelor of Technology in Information Technology(IT)</p>
+                                            <p>CGPA - 9.0<br>Bachelor of Technology in Information Technology(IT)</p>
                                         </div>
                                         <!-- /timeline-body -->
                                     </div>
@@ -259,10 +283,10 @@
                 <div class="col-md-6">
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>C</h3>
+                            <h3>Java</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -330,10 +354,10 @@
                     <!-- /.skill-progress -->
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>BootStrap</h3>
+                            <h3>MongoDB</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -341,10 +365,10 @@
                     <!-- /.skill-progress -->
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>Php</h3>
+                            <h3>Postman</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>75%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -361,18 +385,18 @@
 
             <div class="row more-skill text-center">
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="90" data-color="e74c3c">
+                    <div class="chart" data-percent="80" data-color="e74c3c">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>Html</span>
+                            <span>Cucumber</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="90" data-color="2ecc71">
+                    <div class="chart" data-percent="80" data-color="2ecc71">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>CSS</span>
+                            <span>Karate</span>
                         </div>
                     </div>
                 </div>
@@ -380,7 +404,7 @@
                     <div class="chart" data-percent="80" data-color="3498db">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>SEO</span>
+                            <span>C</span>
                         </div>
                     </div>
                 </div>
@@ -437,7 +461,7 @@
                             <h3 style="text-align:center;margin-top:3%;">Ganpati Band
                                 <hr/>
                             </h3>
-                            <p style="text-align:center;color:black;"><b>Website for one of the finest wedding band in Delhi-NCR providing services for various occasations like marriages, processions and parties.</b></p>
+                            <p style="text-align:center;color:black;"><b>Website for one of the finest wedding band in Delhi-NCR providing services for various occasions like marriages, processions and parties.</b></p>
                         </a>
                     </div>
                 </div>
