--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
         <div class="intro">
             <div class="intro-sub">Himanshu Narang</div>
-            <h1>Software<span>Engineer</span></h1>
+            <h1>Software <span>Engineer</span></h1>
             <p>I am a software Engineer and Data Science Enthusiast <br> interested in learning about new technology. <br> </p>
 
             <div class="social-icons">
@@ -128,7 +128,7 @@
                 <div class="col-md-8 col-md-pull-4">
                     <div class="short-info wow fadeInUp">
                         <h3>Objective</h3>
-                        <p> An opportunity to work and upgrade oneself, as well as being involved in an organization that believes in gaining a competitive edge and giving back to the community. Presently working as an SDET in Cvent. Confident, Quick Learner, responsible and a forward thinker, which others may find inspiring when working as a team.</p>
+                        <p> An opportunity to work and upgrade oneself, as well as being involved in an organization that believes in gaining a competitive edge and giving back to the community. Currently, Working as an SDET at Cvent. Confident, Quick Learner, responsible and a forward thinker, which others may find inspiring when working as a team.</p>
                     </div>
 
                     <div class="short-info wow fadeInUp">
