--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-md-4 col-md-push-8">
                     <div class="biography">
                         <div class="myphoto">
-                            <img src="assets/images/download.png" alt="">
+                            <img src="assets/images/download.jpeg" alt="">
                         </div>
                         <ul>
                             <li><strong>Name:</strong>Himanshu Narang</li>
@@ -137,11 +137,11 @@
 
                         <ul class="list-check">
                             <li>Software Engineer</li>
-                            <li>Data Science</li>
+                            <li>Data Structures</li>
 			    <li>Natural Language Processing</li>
                             <li>Machine Learning</li>
 			    <li>APIs</li>
-			    <li>Competitive Coding</li>
+			    <li>Java & ReactJS</li>
                         </ul>
                     </div>
 
@@ -175,7 +175,7 @@
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Software Development Engineer in Test (SDET)</h3>
+                                            <h3>Software Development Engineer</h3>
                                             <span>Cvent, Gurgaon</span>
                                         </div>
                                         <!-- /timeline-heading -->
@@ -286,7 +286,7 @@
                             <h3>Java</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -295,7 +295,7 @@
 
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>C++</h3>
+                            <h3>ReactJS</h3>
                         </div>
                         <div class="progress">
                             <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
@@ -317,10 +317,10 @@
                     <!-- /.skill-progress -->
                     <div class="skill-progress">
                         <div class="skill-title">
-                            <h3>JavaScript</h3>
+                            <h3>Springboot</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>75%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><span>70%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -335,7 +335,7 @@
                             <h3>Python</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -357,7 +357,7 @@
                             <h3>MongoDB</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -368,7 +368,7 @@
                             <h3>Postman</h3>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -385,31 +385,31 @@
 
             <div class="row more-skill text-center">
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="80" data-color="e74c3c">
+                    <div class="chart" data-percent="90" data-color="e74c3c">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>Cucumber</span>
+                            <span>Jenkins & Jira</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="80" data-color="2ecc71">
+                    <div class="chart" data-percent="90" data-color="2ecc71">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>Karate</span>
+                            <span>APIs</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="80" data-color="3498db">
+                    <div class="chart" data-percent="70" data-color="3498db">
                         <span class="percent"></span>
                         <div class="chart-text">
-                            <span>C</span>
+                            <span>Microservices</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="80" data-color="3498db">
+                    <div class="chart" data-percent="85" data-color="3498db">
                         <span class="percent"></span>
                         <div class="chart-text">
                             <span>Leadership</span>
@@ -417,7 +417,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="75" data-color="3498db">
+                    <div class="chart" data-percent="85" data-color="3498db">
                         <span class="percent"></span>
                         <div class="chart-text">
                             <span>Creativity</span>
@@ -425,7 +425,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="75" data-color="3498db">
+                    <div class="chart" data-percent="85" data-color="3498db">
                         <span class="percent"></span>
                         <div class="chart-text">
                             <span>Management</span>
