--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="download-button">
-                        <a class="btn btn-primary btn-lg" href="assets/HimanshuNarang_Resume.pdf"><i class="fa fa-download"></i>download my cv</a>
+                        <a class="btn btn-primary btn-lg" href="assets/Resume.pdf"><i class="fa fa-download"></i>download my cv</a>
                     </div>
                 </div>
             </div>
