--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-md-4 col-md-push-8">
                     <div class="biography">
                         <div class="myphoto">
-                            <img src="assets/images/download.jpeg" alt="">
+                            <img src="assets/images/profile.jpeg" alt="Profile Pic not available">
                         </div>
                         <ul>
                             <li><strong>Name:</strong>Himanshu Narang</li>
